force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/FEC_MDM_Hold_Case_Config__c.object-meta.xml
<CustomObject>
    <label>MDM Hold Case Config</label>
    <nameField>
        <displayFormat>HCC-{0000}</displayFormat>
        <label>Hold Case Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDM Hold Case Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>