force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/fields/FEC_Active__c.field-meta.xml
<CustomField>
    <fullName>FEC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái hoạt động của cấu hình Hold Case</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>