force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/fields/FEC_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Thông tin Stage sẽ được thực hiện Hold Case tự động hoặc thủ công</description>
    <label>Case Stage</label>
    <referenceTo>FEC_MDM_Case_Stage__c</referenceTo>
    <relationshipLabel>MDM Hold Case Configs</relationshipLabel>
    <relationshipName>MDM_Hold_Case_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>