force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/fields/FEC_Changed_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Changed_Status__c</fullName>
    <description>Trạng thái của Case sau khi chọn hoàn tất (click nút Submit để chuyển Stage)</description>
    <label>Changed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>