force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/fields/FEC_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Channel__c</fullName>
    <description>Thông tin về kênh thực hiện Hold Case tự động</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>