force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/fields/FEC_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Status__c</fullName>
    <description>Trạng thái của Case trước khi chọn hoàn tất (click nút Submit để chuyển Stage)</description>
    <label>Current Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>