force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/fields/FEC_NFU_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Code__c</fullName>
    <description>Thông tin mã NFU được sử dụng khi thực hiện Hold Case (multi-value, separator ;)</description>
    <label>NFU Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>