force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/fields/FEC_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MDM_Hold_Case_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>