force-app/main/default/objects/FEC_MDM_Hold_Case_Config__c/fields/Hold_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Hold_Case_Type__c</fullName>
    <description>Loại Hold Case được thiết lập: Auto/ Manual</description>
    <label>Hold Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>